<resources>
    <string name="app_name">CourierApp</string>
    <string name="action_settings">Zmień status</string>


    <string name="login_header">Logowanie</string>

    <string name="login_username">Nazwa użytkownika</string>
    <string name="login_password">Hasło</string>

    <string name="login_username_hint">user@example.com</string>
    <string name="login_password_hint">*******</string>

    <string name="login_signup">Zarejestruj się!</string>

    <string name="login_button">Zaloguj</string>

    <string name="signup_header">Rejestracja</string>
    <string name="signup_button">Zarejestruj!</string>
    <string name="title_activity_parcel">ParcelActivity</string>

    <string name="toolbar_parcel_name">Przesyłka</string>
    <string name="toolbar_parcel_status">Status</string>

    <string name="parcel_view_origin">Nadawca:</string>
    <string name="parcel_view_dest">Adresat:</string>
    <string name="parcel_view_weight">Waga:</string>

    <string name="parcel_new_address_hint">Adres</string>
    <string name="parcel_new_weight_hint">Waga przesyłki</string>
    <string name="parcel_new_name_hint">Nazwa przesyłki</string>

    <string name="parcel_new_button">Zapisz</string>

    <string name="status_dialog_header">Zmień status przesyłki</string>
    <string name="status_dialog_new_status_hint">Wpisz nowy status...</string>
    <string name="status_dialog_zapisz">Zapisz</string>
    <string name="status_dialog_cancel">Wróć</string>


</resources>
