<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

   <!-- <TextView
            android:text="@string/status_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center"
            android:textSize="30sp"/>-->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_newStatus" android:hint="@string/status_dialog_new_status_hint"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/status_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_statusCancel" android:layout_weight="1"/>
        <Button
                android:text="@string/status_dialog_zapisz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_statusSave" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>