<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".LoginActivity">
    <TextView
            android:layout_width="169dp"
            android:layout_height="53dp"
            android:id="@+id/login_header" android:text="@string/login_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:gravity="center" app:layout_constraintVertical_bias="0.173"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/inputLayout_username"
            android:text="@string/login_username"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"/>
    <TextView
            android:text="@string/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/inputLayout_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.251"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputLayout_username" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/inputLayout_password" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_signup">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_login" android:layout_marginBottom="152dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_signup"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>