<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity">
    <TextView
            android:text="@string/signup_header"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:id="@+id/textView4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center" android:textSize="30sp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.035"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="215dp"
            android:layout_height="53dp"
            android:id="@+id/inputLayout_signup_username"
            android:hint="@string/login_username_hint"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputLayout_signup_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/login_password_hint" android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toTopOf="@+id/button_signup">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signup" android:layout_marginBottom="196dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayout_signup_username" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.333"/>
    <TextView
            android:text="@string/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayout_signup_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.251"/>
</androidx.constraintlayout.widget.ConstraintLayout>